--- a/app/partials/login.html
+++ b/app/partials/login.html
@@ -1,24 +1,17 @@
-
-<h2>Login Page</h2>
-
-<form>
-    <label>
-        <span>email</span>
-        <input type="text" ng-model="email" />
-    </label>
-    <label>
-        <span>password</span>
-        <input type="password" ng-model="pass" />
-    </label>
-    <label ng-cloak ng-show="createMode">
-        <span>confirm pass</span>
-        <input type="password" ng-model="confirm" />
-    </label>
-    <button ng-click="login(email, pass)" ng-hide="createMode">Log In</button>
-    <button ng-click="createMode = true" ng-hide="createMode">Register</button>
-    <button ng-cloak ng-show="createMode" ng-click="createAccount(email, pass, confirm)">Create Account</button>
-    <button ng-cloak ng-show="createMode" ng-click="createMode = false">Cancel</button>
-
-    <p ng-show="err" class="error">{{err}}</p>
-</form>
-
+<div id='signin-form' class="inner cover">
+  <form class="form-signin" role="form">
+    <h2 class="form-signin-heading">Please sign in</h2>
+    <input ng-model="email" type="email" class="form-control" placeholder="Email address" required autofocus>
+    <input ng-model="pass" type="password" class="form-control" placeholder="Password" required>
+    <div ng-cloak ng-show="createMode">
+      <input ng-model="confirm" type="password" class="form-control" placeholder="Confirm Password" required>
+    </div>
+  <!--  <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button> -->
+    <button class="btn btn-lg btn-primary btn-block" ng-click="login(email, pass)" ng-hide="createMode">Log In</button>
+    <button class="btn btn-lg btn-primary btn-block" ng-click="createMode = true" ng-hide="createMode">Register</button>
+    <button class="btn btn-lg btn-primary btn-block" ng-cloak ng-show="createMode" ng-click="createAccount(email, pass, confirm)">Create Account</button>
+    <button class="btn btn-lg btn-primary btn-block" ng-cloak ng-show="createMode" ng-click="createMode = false">Cancel</button>
+    <br/>
+    <div ng-show="err" class="alert alert-danger" role="alert">{{err}}</div>
+  </form>
+</div>
