--- a/app/partials/containers.html
+++ b/app/partials/containers.html
@@ -1,1 +1,38 @@
-<h1> this is the parital for display of containers<h1>
+<div class="row">
+  <div class="col-md-2"></div>
+  <div class="col-md-8">
+    <label>
+        <span>Add Object</span>
+    </label>
+    <input ng-model="object.name" class="form-control" type="text"/>
+    <input ng-model="object.container" class="form-control" type="text"/>
+    <input ng-model="object.data" class="form-control" type="text"/>
+  </div>
+  <div class="col-md-2"></div>
+  <div class="col-md-8">
+    <label>
+        <span>Add Container</span>
+    </label>
+    <input ng-model="container.name" class="form-control" type="text"/>
+    <input ng-model="container.container" class="form-control" type="text"/>
+    <input ng-model="container.data" class="form-control" type="text"/>
+  </div>
+  <div class="col-md-2"></div>
+  <div class="col-md-8">
+    <label>
+        <span>Select Container</span>
+    </label>
+    <select ng-model='parentName' id='parentName' ng-options='container.name for container in containers'>
+      
+    </select>
+    <ul id='containersList'>
+      <li ng-repeat='container in containers'>
+        <strong>Name : </strong>{{container.name}}   <strong>Owner : </strong>{{container.owner}}
+      </li>
+    </ul>
+    <input ng-model="object.name" class="form-control" type="text"/>
+    <input ng-model="object.container" class="form-control" type="text"/>
+    <input ng-model="object.data" class="form-control" type="text"/>
+  </div>
+  <div class="col-md-2"></div>
+</div>
