completed controller method for adding items to grocery list
currently there is a hard-coded grocery list reference, until we figure
out how to pass this around in the application

--- a/app/partials/list.html
+++ b/app/partials/list.html
@@ -1,1 +1,4 @@
-this is the partial that will load the Grocery List Page
+<div ng-show="err" class="alert alert-danger" role="alert">{{err}}</div>
+
+<input ng-model="item" type="text" class="form-control" placeholder="New Item" required>
+<button class="btn btn-lg btn-primary btn-block" ng-click="addItem(item)">Add Item</button>
