Comleted View container, View List and integrated add item. Testing pending

--- a/app/partials/containers.html
+++ b/app/partials/containers.html
@@ -1,35 +1,35 @@
-<header>Add Grocery List</header>
-<div>
-  <label for='listName'>Name</label>
+<head>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.17/angular.min.js"></script>
+    <script src="https://cdn.firebase.com/js/client/1.0.15/firebase.js"></script>
+    <script src="https://cdn.firebase.com/libs/angularfire/0.8.0/angularfire.min.js"></script>
+  </head>
+  <body ng-controller="IMController">
+    <div>
+      <header>Add Container</header>
+      <div>
+        <label for='listName'>Name</label>
   <input ng-model='listName' class="form-control" type='text' id='listName' placeholder='enter a list name...'><br>
   <label for='parentName'>Parent</label>
-  <select ng-model='parentName' id='parentName' ng-options='list.name for list in userGroceryLists'>
-  	<option value="">rootContainer</option>
-  </select><br>
-  <!--<label for='ownerName'>Owner</label>
-  <select ng-model='ownerName' id='ownerName' ng-options='user.name for user in users'></select><br>-->
-  <button ng-click="addList()">Add</button>
-</div>
-
-<header>Your Grocery Lists</header>
-<ul id='lists'>
-  <li ng-repeat='list in userGLs'>
-    <strong>Name : </strong>{{list.name}}
-  </li>
-</ul>
-
-
-<!--<div class="row">
-  <div class="col-md-2"></div>
-  <div class="col-md-8">
-    <label>
-        <span>Add Grocery List</span>
-    </label>
-    <input ng-model="listName" id='listName' class="form-control" type="text" placeholder='enter a list name...'/>
-    <select ng-model='parentName' id='parentName' class="form-control" ng-options='list.name for container in containers'>
-      <option value=""></option>
-    </select>
-    <input ng-model="object.data" class="form-control" type="text"/>
-  </div>
-  <div class="col-md-2"></div>
-</div>-->
+        <select ng-model='parentName' id='parentName' ng-options='container.name for container in userGLs'>
+        	<option value="">-- Choose parent --</option>
+        </select><br>
+        <button ng-click="addContainer()">Add</button>
+      </div><br>
+      <header>All Containers</header>
+      <!--<ul id='containersList'>
+        <li ng-repeat='container in userGLs'>
+          <strong>Name : </strong>{{container.name}}   <strong>Owner : </strong>{{container.owner}}
+        </li>
+      </ul>-->
+      <ul id='containersList'>
+        <li ng-repeat='(key, value) in userObjs'>
+          <strong>Name : </strong>{{key}} &nbsp; <input type='text' class="form-control" id='item'+{{key}} placeholder='enter an item...'><button ng-click="addItem('Item2',key)">Add Item</button>
+          <ul id='objsList'+{{key}}+''>
+            <li ng-repeat='object in value'>
+              {{object.data}}
+            </li>
+          </ul>
+        </li>
+      </ul>
+    </div>
+  </body>
