--- a/app/partials/containers.html
+++ b/app/partials/containers.html
@@ -2,8 +2,113 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.17/angular.min.js"></script>
     <script src="https://cdn.firebase.com/js/client/1.0.15/firebase.js"></script>
     <script src="https://cdn.firebase.com/libs/angularfire/0.8.0/angularfire.min.js"></script>
+
+    <script>
+      $(function () {
+    $('.tree li:has(ul)').addClass('parent_li').find(' > span').attr('title', 'Collapse this branch');
+    $('.tree li.parent_li > span').on('click', function (e) {
+        var children = $(this).parent('li.parent_li').find(' > ul > li');
+        if (children.is(":visible")) {
+            children.hide('fast');
+            $(this).attr('title', 'Expand this branch').find(' > i').addClass('icon-plus-sign').removeClass('icon-minus-sign');
+        } else {
+            children.show('fast');
+            $(this).attr('title', 'Collapse this branch').find(' > i').addClass('icon-minus-sign').removeClass('icon-plus-sign');
+        }
+        e.stopPropagation();
+    });
+});
+
+    </script>
+
+    <style>
+
+    .tree {
+    min-height:20px;
+    padding:19px;
+    margin-bottom:20px;
+    background-color:#fbfbfb;
+    border:1px solid #999;
+    -webkit-border-radius:4px;
+    -moz-border-radius:4px;
+    border-radius:4px;
+    -webkit-box-shadow:inset 0 1px 1px rgba(0, 0, 0, 0.05);
+    -moz-box-shadow:inset 0 1px 1px rgba(0, 0, 0, 0.05);
+    box-shadow:inset 0 1px 1px rgba(0, 0, 0, 0.05)
+}
+.tree li {
+    list-style-type:none;
+    margin:0;
+    padding:10px 5px 0 5px;
+    position:relative
+}
+.tree li::before, .tree li::after {
+    content:'';
+    left:-20px;
+    position:absolute;
+    right:auto
+}
+.tree li::before {
+    border-left:1px solid #999;
+    bottom:50px;
+    height:100%;
+    top:0;
+    width:1px
+}
+.tree li::after {
+    border-top:1px solid #999;
+    height:20px;
+    top:25px;
+    width:25px
+}
+.tree li span {
+    -moz-border-radius:5px;
+    -webkit-border-radius:5px;
+    border:1px solid #999;
+    border-radius:5px;
+    display:inline-block;
+    padding:3px 8px;
+    text-decoration:none
+}
+.tree li.parent_li>span {
+    cursor:pointer
+}
+.tree>ul>li::before, .tree>ul>li::after {
+    border:0
+}
+.tree li:last-child::before {
+    height:30px
+}
+.tree li.parent_li>span:hover, .tree li.parent_li>span:hover+ul li span {
+    background:#eee;
+    border:1px solid #94a0b4;
+    color:#000
+}
+
+    </style>
+
   </head>
-  <body ng-controller="IMController">
+  <body ng-controller="ContainerCtrl">
+    <div class="tree well">
+    <ul>
+        <li>
+            <span><i class="icon-folder-open"></i> Home</span>
+            <ul id='containersList'>
+        		<li ng-repeat='(key, value) in userObjs'>
+        			<span><i class="icon-minus-sign"></i> {{key}}</span>
+          			<!--<strong>Name : </strong>{{key}} &nbsp; <input type='text' class="form-control" id='item'+{{key}} placeholder='enter an item...'><button ng-click="addItem('Item2',key)">Add Item</button>-->
+          			<ul id='objsList'+{{key}}+''>
+            			<li ng-repeat='object in value'>
+              				<span><i class="icon-leaf"></i> {{object.data}}</span>
+            			</li>
+          			</ul>
+        		</li>
+      		</ul>
+        </li>
+    </ul>
+</div>
+  </body>
+  <!--<body ng-controller="IMController">
     <div>
       <header>Add Container</header>
       <div>
@@ -16,11 +121,6 @@
         <button ng-click="addContainer()">Add</button>
       </div><br>
       <header>All Containers</header>
-      <!--<ul id='containersList'>
-        <li ng-repeat='container in userGLs'>
-          <strong>Name : </strong>{{container.name}}   <strong>Owner : </strong>{{container.owner}}
-        </li>
-      </ul>-->
       <ul id='containersList'>
         <li ng-repeat='(key, value) in userObjs'>
           <strong>Name : </strong>{{key}} &nbsp; <input type='text' class="form-control" id='item'+{{key}} placeholder='enter an item...'><button ng-click="addItem('Item2',key)">Add Item</button>
@@ -31,5 +131,5 @@
           </ul>
         </li>
       </ul>
-    </div>
+    </div>-->
   </body>
